# foresight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  acknowledgements.txt  log.txt  notes.txt
include/foresight/: action.h  actiontype.h  actiontypefactory.h  arbiter.h  cancelaction.h  domain.h  domainfactory.h  duration.h  experimentaction.h  experimentactiontype.h  experimentactiontypefactory.h  fakeregret.h  fakeworld.h  gp.h  main.h  model.h  nullaction.h  policy.h  real.h  regret.h  resource.h  resourcetype.h  simulator.h  simulatorworld.h  state.h  statefactory.h  types.h
include/foresight/bayesopt/: custommodel.h
include/foresight/policies/: epsilonnull.h  human.h  mei.h  pair.h  random.h  simulator.h  smartuniform.h  smooth.h  switchuniform.h  uniform.h  upfront.h  upfront_bad.h  upfront_smooth.h
include/foresight/util/: random.h
scripts/: plot_points.py  plot_regrets.py  run_exp.sh
src/: action.cc  actiontype.cc  actiontypefactory.cc  arbiter.cc  cancelaction.cc  domain.cc  domainfactory.cc  duration.cc  experimentaction.cc  experimentactiontype.cc  experimentactiontypefactory.cc  fakeregret.cc  fakeworld.cc  gp.cc  main.cc  model.cc  nullaction.cc  policy.cc  regret.cc  resource.cc  resourcetype.cc  simulator.cc  simulatorworld.cc  state.cc  statefactory.cc  test.cc  types.cc
src/bayesopt/: custommodel.cc
src/policies/: epsilonnull.cc  human.cc  mei.cc  pair.cc  random.cc  smartuniform.cc  smooth.cc  switchuniform.cc  uniform.cc  upfront.cc  upfront_bad.cc  upfront_smooth.cc
test/: CMakeLists.txt  main.cc  resourceamount.cc
